# cursor.config_mcp_rules_skills

./: .gitignore  README.md  mcp.json  x_config.sh
ai.docs/: cursor-server-directory-explained.md  cursor-skills-and-rules-overview.md
cursor.docs/: cursor-rules-and-skills-guide.md
rules/: chinese-response.mdc  feishu-doc-review.mdc  mermaid-to-feishu-whiteboard.mdc
skills/: markdown-export.md  mermaid-to-drawio.md
skills/ai-cursor-knowledge-index/: SKILL.md
skills/ai-work-result-report/: SKILL.md  anti-patterns.md  checklist.md  examples.md  template.md
skills/cards-to-drawio/: SKILL.md
skills/designated-knowledge-index/: SKILL.md
skills/drawio-to-feishu-canvas/: SKILL.md
skills/dual-doc-faq/: SKILL.md
skills/lark-base/: SKILL.md
skills/lark-mail/: SKILL.md
skills/lark-shared/: SKILL.md
skills/lark-sheets/: SKILL.md
skills/lark-slides/: SKILL.md
skills/lark-task/: SKILL.md
skills/lark-wiki/: SKILL.md
skills/makefile-bin-suffix/: SKILL.md
skills/markdown-export/: SKILL.md
skills/markdown-knowledge-maintain/: SKILL.md
skills/markdown-to-feishu-doc/: SKILL.md
skills/markdown-to-html/: README.md  SKILL.md  pyproject.toml
skills/markdown-to-html/examples/: sample.html  sample.md
skills/markdown-to-html/examples/sample.figures/: demo-stack.html
skills/markdown-to-html/md2html/: __init__.py  builder.py  cli.py  figures.py  frontmatter.py  mermaid_analyze.py
skills/markdown-to-html/md2html/templates/: base.css  page.html  runtime.js
skills/markdown-to-slides/: SKILL.md
skills/mermaid-flowchart-layout/: SKILL.md
(+20 files in other folders)
