[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "md2html"
version = "0.1.0"
description = "Markdown → 独立 HTML（markdown-to-html 技能规范）"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rigol" }]
dependencies = []

[project.scripts]
md2html = "md2html.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["md2html*"]

[tool.setuptools.package-data]
md2html = ["templates/*"]
